Fix layout of NotificationsInboxWidget on narrow screens
Bug: T258939

--- a/modules/styles/mw.echo.ui.NotificationsInboxWidget.less
+++ b/modules/styles/mw.echo.ui.NotificationsInboxWidget.less
@@ -37,11 +37,6 @@
 		width: @specialpage-sidebar-width;
 		padding-right: 1em;
 		vertical-align: top;
-
-		@media all and ( max-width: ( @specialpage-hd-width - 1 ) ) {
-			// Hide the sidebar for small screens
-			display: none;
-		}
 	}
 
 	&-main {
@@ -82,8 +77,10 @@
 					}
 				}
 
-				&-readState {
-					display: inline-block;
+				// Nav filter is the mobile version of readState
+				&-readState,
+				&-nav-filter {
+					display: block;
 				}
 
 				&-settings,
@@ -98,6 +95,14 @@
 					}
 				}
 			}
+		}
+
+		&-cell-placeholder {
+			display: block;
+		}
+
+		&-sidebar {
+			display: none;
 		}
 
 		&-toolbarWrapper {
